syntax = "proto3";
package core_output;

import "state.proto";
import "control.proto";
import "state_extend.proto";

message PlaneMessageGroup {
  double time = 1;
  repeated PlaneMessage view_msg = 2;
}

message PlaneMessage {
  string id = 1;
  CoreOutput output = 2;
}

message CoreOutput {
  state.State state = 1;
  control.Control control = 2;
  double d_lef = 3;
  state_extend.StateExtend state_extend = 4;
}
